feat(advice): integrate bilingual persisted advice workflow